Hi sasi 1st commit

--- a/index.html
+++ b/index.html
@@ -6,6 +6,5 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ex ullam possimus ratione libero magnam, eveniet, vitae voluptatum saepe alias vero iure architecto nobis velit quae expedita recusandae vel inventore.</h1>
-</body>
+    <h1>Lorem ipsum </h1>
 </html>
