--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 <body>
     <h1>Lorem ipsum 2</h1>
     <h1>Lorem ipsum 1</h1>
-    <p>Lorem ipsum,g dolor sit amet consectetur adipisicing elit. Ipsum sunt accusantium provident voluptate iure laborum maxime commodi sapiente cum, quo eaque dignissimos ipsam recusandae sit neque aliquid, tenetur inventore blanditiis.</p>
+    <p>Lorem ipsum,g dolor sit amet consectetur adi\sit neque aliquid, tenetur inventore blanditiis.</p>
 </html>
