--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure amet, molestiae aperiam sunt, voluptatem, recusandae velit illo maiores aliquam odio earum placeat a voluptates ipsum at doloremque perferendis! Fugiat, dolores?</h1>
-<p>jnhkvvmjbvsdlfjvd</p>
-dsfkljvbksdlfv
-d'cjnbd nmfd\
+<h1>EEEE</h1>
 
 </body>
 </html>
