--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-<h1>EEEE</h1>
-<span>ssjdchkjdcjhsdc</span>
+<h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus aperiam rem eveniet sed a libero vero doloremque ut quod, excepturi assumenda eius at ipsam quisquam aspernatur sit molestiae labore illo?</h1>
 </body>
 </html>
