--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
 <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus aperiam rem eveniet sed a libero vero doloremque ut quod, excepturi assumenda eius at ipsam quisquam aspernatur sit molestiae labore illo?</h1>
+
+<h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi optio eum, harum repudiandae beatae iste cupiditate autem doloremque laborum, minus praesentium blanditiis vitae sit eaque minima accusantium aliquid exercitationem sed.</h6>
 </body>
 </html>
