--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus aperiam rem eveniet sed a libero vero doloremque ut quod, excepturi assumenda eius at ipsam quisquam aspernatur sit molestiae labore illo?</h1>
-
-<h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi optio eum, harum repudiandae beatae iste cupiditate autem doloremque laborum, minus praesentium blanditiis vitae sit eaque minima accusantium aliquid exercitationem sed.</h6>
+<h1>EEEE</h1>
+<span>ssjdchkjdcjhsdc</span>
 </body>
 </html>
