--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
-
-=======
-<h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus aperiam rem eveniet sed a libero vero doloremque ut quod, excepturi assumenda eius at ipsam quisquam aspernatur sit molestiae labore illo?</h1>
-
-<h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi optio eum, harum repudiandae beatae iste cupiditate autem doloremque laborum, minus praesentium blanditiis vitae sit eaque minima accusantium aliquid exercitationem sed.</h6>
->>>>>>> parent of 6fa2d76 (HI KING)
+    <h1>hii this is May21</h1>
 </body>
 </html>
